animate to solve subtitle contrast problem

--- a/src/components/Reception.css
+++ b/src/components/Reception.css
@@ -1,8 +1,30 @@
 
 #reception-header h1 {
-  -webkit-text-stroke: 1px black;
+  -webkit-text-stroke: 1px var(--color-neutral-950);
   background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0.9) 70%);
   background-size: cover;
   -webkit-background-clip: text;
   background-clip: text;
+}
+
+@keyframes diagonalGradient {
+  0% {
+    background-position: 0% 0%;
+  }
+
+  50% {
+    background-position: 100% 100%;
+  }
+
+  100% {
+    background-position: 0% 0%;
+  }
+}
+
+#reception-header h2 {
+    background: linear-gradient(45deg, white, #353e61, white);
+    background-clip: text;
+      background-size: 1200% 1200%;
+      -webkit-text-fill-color: transparent;
+      animation: diagonalGradient 6s linear infinite;
 }
